--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         class HeaderContent extends HTMLElement {
             connectedCallback() {
                 this.innerHTML = `
-                    <header class="mb-8 relative bg-cover bg-center h-screen flex items-end" style="background-image: url('./img/book-006.png');">
+                    <header class="mb-8 relative bg-cover bg-center h-screen flex items-end" style="background-image: url('img/book-006.png');">
                         <div class="absolute inset-0 bg-purple-600 opacity-50"></div>
                         <div class="relative z-10 container mx-auto px-4 py-24 text-center text-white mb-8">
                             <h1 class="text-[12rem] font-bold drop-shadow-lg" style="text-shadow: 0 0 20px rgba(0, 0, 0, 0.5);">Stallabella</h1>
@@ -112,7 +112,7 @@
                                 </p>
                             </div>
                             <div class="flex flex-col justify-center items-center">
-                                <img src="../cover.png" alt="Stallabella's Story Book Cover" class="book-cover">
+                                <img src="img/cover.png" alt="Stallabella's Story Book Cover" class="book-cover">
                             </div>
                         </div>
                          <div class="flex justify-center">
