Some more tweaks

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stallabella - A Magical Adventure</title>
+    <title>Stallabella - A Tale of Playfulness and Punctuality</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Indie+Flower&display=swap"
         rel="stylesheet">
@@ -80,7 +80,7 @@
         class HeaderContent extends HTMLElement {
             connectedCallback() {
                 this.innerHTML = `
-                    <header class="mb-8 relative bg-cover bg-center h-screen flex items-end" style="background-image: url('img/book-006.png');">
+                    <header class="mb-8 relative bg-cover bg-center h-screen flex items-end" style="background-image: url('img/book-006.png'); background-attachment: fixed;">
                         <div class="absolute inset-0 bg-purple-600 opacity-50"></div>
                         <div class="relative z-10 container mx-auto px-4 py-24 text-center text-white mb-8">
                             <h1 class="text-[12rem] font-bold drop-shadow-lg" style="text-shadow: 0 0 20px rgba(0, 0, 0, 0.5);">Stallabella</h1>
