--- a/index.html
+++ b/index.html
@@ -17,49 +17,6 @@
         h2 {
             font-family: 'Amatic SC', cursive;
         }
-
-        .book-cover {
-            width: 100%;
-            max-width: 450px;
-            /* Adjust as needed */
-            height: auto;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.5);
-            transform: perspective(1000px) rotateY(-40deg);
-            transform-origin: left center;
-            position: relative;
-        }
-
-        .book-cover::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 10px;
-            /* Adjust width for page thickness */
-            height: 100%;
-            background: linear-gradient(to right, #fff, #ddd);
-            box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.5);
-            transform: perspective(1000px) rotateY(40deg);
-            transform-origin: left center;
-        }
-
-        .book-cover::after {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 10px;
-            /* Adjust position for binding */
-            width: 5px;
-            /* Adjust width for binding */
-            height: 100%;
-            background: #333;
-            /* Color for binding */
-            box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.5);
-            transform: perspective(1000px) rotateY(40deg);
-            transform-origin: left center;
-        }
     </style>
 </head>
 
@@ -90,11 +47,11 @@
         class HeaderContent extends HTMLElement {
             connectedCallback() {
                 this.innerHTML = `
-                    <header class="mb-8 relative bg-cover bg-center h-screen flex items-end" style="background-image: url('img/book-006.png'); background-attachment: fixed; background-size: cover;">
+                    <header class="mb-8 relative bg-hero bg-no-repeat bg-cover bg-center bg-fixed h-screen" style="background-image: url('img/book-006.png');">
                         <div class="absolute inset-0 bg-purple-600 opacity-50"></div>
-                        <div class="relative z-10 container mx-auto px-4 py-24 text-center text-white mb-8">
-                            <h1 class="text-9xl md:text-[12rem] font-bold drop-shadow-lg" style="text-shadow: 0 0 20px rgba(0, 0, 0, 0.5);">Stallabella</h1>
-                            <p class="text-xl md:text-2xl drop-shadow-lg" style="text-shadow: 0 0 20px rgba(0, 0, 0, 0.5);">A Tale of Playfulness and Punctuality</p>
+                        <div class="absolute bottom-0 left-0 right-0 pb-28 z-10 container mx-auto text-center text-white mb-8">
+                            <h1 class="text-8xl md:text-9xl font-bold drop-shadow-xl">Stallabella</h1>
+                            <p class="text-xl drop-shadow-xl">A Tale of Playfulness and Punctuality</p>
                             <div class="mt-8">
                                 <buy-button href="https://drive.google.com/file/d/1SwBSN7XiI3VmJIkjlavYpX41-nCaH91E/view?usp=drive_link" text="Buy on Amazon $12.99"></buy-button>
                             </div>
