Add link to buy book

--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
                             <h1 class="text-8xl md:text-9xl font-bold drop-shadow-xl">Stallabella</h1>
                             <p class="text-xl drop-shadow-xl">A Tale of Playfulness and Punctuality</p>
                             <div class="mt-8">
-                                <buy-button href="https://drive.google.com/file/d/1SwBSN7XiI3VmJIkjlavYpX41-nCaH91E/view?usp=drive_link" text="Buy on Amazon $12.99"></buy-button>
+                                <buy-button href="https://www.amazon.com/dp/B0DHVCSFY5" text="Buy on Amazon $12.99"></buy-button>
+                            </div>
+                            <div class="mt-8">
+                                <a href="#watch" class="text-white text-xl underline">Watch The Story Now</a>
                             </div>
                         </div>
                     </header>
@@ -86,7 +89,7 @@
                             </div>
                         </div>
                          <div class="flex justify-center">
-                            <buy-button href="https://drive.google.com/file/d/1SwBSN7XiI3VmJIkjlavYpX41-nCaH91E/view?usp=drive_link" text="Buy on Amazon $12.99"></buy-button>
+                            <buy-button href="https://www.amazon.com/dp/B0DHVCSFY5" text="Buy on Amazon $12.99"></buy-button>
                         </div>
                     </section>
                 `;
